--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.24.3",
     "aos": "^2.3.4",
+    "axios": "^1.8.3",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
     "next": "15.1.4",
