--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.10.2",
     "next": "15.1.4",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
